<resources>
    <string name="app_name">Театры Вятки</string>
    <string name="theaterTUZ_name">Театр на Спасской</string>
    <string name="theaterTUZ_address">г.Киров, ул. Спасская,17</string>
    <string name="theaterDrama_name">Кировский драматический театр</string>
    <string name="theaterDrama_address">г.Киров, ул. Московская,37</string>
    <string name="theaterDol_name">Кировский театр кукол имени А.Н. Афанасьева</string>
    <string name="theaterDol_address">г.Киров, ул. Спасская,22</string>
    <string name="truppa_but">Труппа</string>
    <string name="afisha_but">Афиша</string>
    <string-array name="theater_names">
        <item>@string/theaterTUZ_name</item>
        <item>@string/theaterDrama_name</item>
        <item>@string/theaterDol_name</item>
    </string-array>
    <string-array name="theater_address">
        <item>@string/theaterTUZ_address</item>
        <item>@string/theaterDrama_address</item>
        <item>@string/theaterDol_address</item>
    </string-array>
    <string-array name="theater_site">
        <item>"https://ekvus-kirov.ru"</item>
        <item>"https://kirovdramteatr.ru"</item>
        <item>"http://kirovkukla.ru"</item>
    </string-array>
    <string-array name="theater_vk">
        <item>"https://vk.com/teatr_kukol_kirov"</item>
        <item>"https://vk.com/kirov.dramteatr"</item>
        <item>"https://vk.com/theateronthespasskaya"</item>
    </string-array>
    <string-array name="theater_tel">
        <item>"+7(8332)411499"</item>
        <item>"+7(8332)413252"</item>
        <item>"+7(8332)715720"</item>
    </string-array>
</resources>
